<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_A">Team A</string>
    <string name="score_A">0</string>
    <string name="_3_points_A">+3 Points</string>
    <string name="_2_points_A">+2 Points</string>
    <string name="free_throw_A">Free throw</string>
    <string name="team_B">Team B</string>
    <string name="score_B">0</string>
    <string name="_3_points_B">+3 Points</string>
    <string name="_2_points_B">+2 Points</string>
    <string name="free_throw_B">Free throw</string>
    <string name="reset">Reset</string>
</resources>